align and wrap fix

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
     text-decoration: none;
     color: #E5E7EB;
     font-weight: bold;
-    font-size: 16px;
 }
 
 #image {
@@ -136,9 +135,15 @@
     background-color: #E5E7EB;
     padding: 150px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-col {
+    display: flex;
     flex-direction: column;
-    align-items: flex-end;
     gap: 30px;
+    padding: 0 300px 0;
 }
 
 .quote {
@@ -146,12 +151,13 @@
     color: #1F2937;
     font-weight: normal;
     font-style: italic;
-    width: 900px;
+    /* width: 900px; */
 }
 
 .quote-author {
     font-size: 25px;
     font-weight: 800;
+    align-self: flex-end;
 }
 
 .call-to-action-ctr {
@@ -170,6 +176,7 @@
     padding: 30px 150px;
     border-radius: 10px;
     gap: 100px;
+    flex-wrap: wrap;
 }
 
 .cta-text-col {
